WIP: New template with yml update

--- a/brandon_the_builder/spec/data/DEMO_SCRIPT_TEMPLATE/DEMO_script_spec.rb.erb
+++ b/brandon_the_builder/spec/data/DEMO_SCRIPT_TEMPLATE/DEMO_script_spec.rb.erb
@@ -1,5 +1,6 @@
 
 describe '<%= demo_script_name %>Script' do
+  include TestRunHelper
   let(:script) { <%= demo_script_name %>Script.new }
   context 'converter' do
     def local_run_test(input_file)
